<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".EmployeeProfile">

    <View
        android:id="@+id/top_view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/inp_employee_email"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:text="@string/contact_phone"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inp_employee_phone"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:text="@string/contact_email"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/inp_employee_email"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView10"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="35dp"
        android:text="@string/contact_email_sample"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/inp_employee_phone"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="35dp"
        android:text="@string/contact_phone_sample"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />

    <View
        android:id="@+id/top_view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/inp_employee_doj"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inp_employee_id"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:text="@string/profile_date_join"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/inp_employee_doj"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView14"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="35dp"
        android:text="@string/profile_date_join_sample"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inp_employee_gender"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:text="@string/profile_id"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/inp_employee_id"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView13"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="35dp"
        android:text="@string/hint_employee_id"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inp_employee_age"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:text="@string/profile_gender"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/inp_employee_gender"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView12"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="35dp"
        android:text="@string/profile_gender_sample"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inp_employee_name"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:text="@string/profile_age"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/inp_employee_age"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="35dp"
        android:text="@string/profile_age_sample"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="170dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="170dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_action_profile"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/prof_employee_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView4"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="80dp"
        android:text="@string/employee_name"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/prof_employee_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prof_employee_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="80dp"
        android:text="@string/hint_employee_id"
        android:textAlignment="center"
        android:textSize="18sp" />

    <View
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/prof_employee_id"
        android:layout_marginTop="15dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_view"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:text="@string/profile_head"
        android:textColor="@color/colorBlue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:text="@string/profile_name"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/inp_employee_name"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="35dp"
        android:text="@string/employee_name"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_view2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:text="@string/contact_head"
        android:textColor="@color/colorBlue"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_below="@+id/top_view3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/ic_action_profile_note" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_view3"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="35dp"
        android:layout_toEndOf="@+id/imageView5"
        android:text="@string/profile_note"
        android:textColor="@color/colorBlue"
        android:textSize="15sp" />

</RelativeLayout>

</ScrollView>