<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="295dp"
        app:srcCompat="@drawable/ic_action_logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="140dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="140dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorDarkBlue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="61dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="61dp"
        android:text="@string/inst_employee_details"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_employee_id"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="35dp"
        app:hintTextAppearance="@style/CustomTextAppearance">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_employee_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/edit_employee_id"
            android:hint="@string/hint_employee_id"
            android:textSize="18sp"
            app:hintTextAppearance="@style/CustomTextAppearance" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_employee_id"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="35dp"
        app:passwordToggleEnabled="true"
        app:hintTextAppearance="@style/CustomTextAppearance">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/edit_password"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:password="true"
            android:textSize="18sp"
            app:hintTextAppearance="@style/CustomTextAppearance" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_sigin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="35dp"
        android:text="@string/label_signin"
        android:textAllCaps="false"
        android:textSize="16sp" />


</RelativeLayout>