<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AttendanceFragment">

    <ProgressBar
        android:id="@+id/attendance_progress2"
        style="?android:progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="105dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="105dp"
        android:indeterminate="false"
        android:max="100"
        android:paddingStart="7dp"
        android:paddingTop="7dp"
        android:paddingEnd="7dp"
        android:paddingBottom="7dp"
        android:progress="100"
        android:progressDrawable="@drawable/circular_progress1" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/attendance_progress"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="66dp"
        android:text="@string/attendance_total_days"
        android:textColor="@color/colorBlack"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/attendance_progress"
        android:layout_alignParentStart="true"
        android:layout_marginStart="66dp"
        android:layout_marginTop="85dp"
        android:text="@string/attendance_present_days"
        android:textColor="@color/colorBlack"
        android:textSize="16sp" />

    <ProgressBar
        android:id="@+id/attendance_progress"
        style="?android:progressBarStyleHorizontal"
        android:layout_width="225dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="105dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="105dp"
        android:indeterminate="false"
        android:max="100"
        android:paddingStart="7dp"
        android:paddingTop="7dp"
        android:paddingEnd="7dp"
        android:paddingBottom="7dp"
        android:progress="75"
        android:progressDrawable="@drawable/circular_progress" />

    <TextView
        android:id="@+id/present_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/attendance_progress"
        android:layout_alignStart="@+id/textView18"
        android:layout_alignEnd="@+id/textView18"
        android:layout_marginStart="23dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="23dp"
        android:text="@string/attendance_present_days_sample"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/working_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/attendance_progress"
        android:layout_alignStart="@+id/textView19"
        android:layout_alignEnd="@+id/textView19"
        android:layout_marginStart="23dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="23dp"
        android:text="@string/attendance_total_days_sample"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/attendance_disp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/attendance_progress"
        android:layout_alignTop="@+id/attendance_progress"
        android:layout_alignEnd="@+id/attendance_progress"
        android:layout_alignBottom="@+id/attendance_progress"
        android:layout_marginStart="55dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="75dp"
        android:text="75%"
        android:textAlignment="center"
        android:textColor="@color/colorBlue"
        android:textSize="37dp" />

    <View
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/textView18"
        android:layout_marginTop="25dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:text="@string/generate_attendance"
        android:textAllCaps="true" />

    <ListView
        android:id="@+id/list_qr_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView16"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="0dp" />

</RelativeLayout>