<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp
"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:id="@+id/item"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:padding="8dp">

            <TextView
                android:id="@+id/ann_head"
                android:layout_width="wrap_content"
                android:layout_height="30dp"

                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@+id/imageView"
                android:text="@string/menu_announcement"
                android:textColor="@color/colorDarkBlue"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="21dp"
                android:layout_marginBottom="21dp"
                app:srcCompat="@drawable/ic_action_alerts" />

            <TextView
                android:id="@+id/ann_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ann_pub"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@+id/imageView"
                android:text="@string/list_announcement_time"
                android:textColor="@color/colorAccent"
                android:textColorLink="@color/colorBlue"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/ann_pub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ann_head"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@+id/imageView"
                android:text="@string/list_announcement_publisher"
                android:textColor="@color/colorBlack"
                android:textStyle="normal" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>